<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Picture Sync</string>
    <string name="login_button">Login to Facebook</string>
    <string name="login_failed_text">Login to Facebook failed</string>
    <string name="login_canceled_text">Canceled by user</string>
    <string name="session_no_valid_text">No valid session found, please login.</string>
    <string name="profile_picture_description">The persons facebook profile picture</string>
    <string name="downloading_friends_text">Getting your friends</string>
    <string name="login_button_description">Facebook login button</string>
    <string name="getting_your_contacts_text">Matching with your contacts</string>
    <string name="friend_contact_no_match_found">No match in Contacts</string>
    <string name="friend_contact_match_found">Ready for sync</string>
    <string name="sync_description">Sync pictures from facebook</string>
    <string name="unlink_friend_text">Unlink</string>
    <string name="link_friend_text">Manual Link to Contact</string>
    <string name="sync_this_friend">Sync this friend</string>
    <string name="syncing_header_text">Syncing your pictures</string>
    <string name="syncing_done_text">Syncing is now done. Your contact pictures should have been updated.\n\nWould you like to post a message about this app on Facebook? (You will get to choose what you want to write) </string>
    <string name="icon_description">Contact Picture Sync icon</string>
    <string name="help_header_header_text">This application works in three steps:</string>
    <string name="help_step1_header_text">1. Connect with Facebook</string>
    <string name="help_step1_body_text">Press the button above which will take you to the Facebook login. Enter your details and press login. This will show you which permissions this app needs. This app will not post anything on your wall or keep any of your information.</string>
    <string name="help_step2_header_text">2. The Friend List</string>
    <string name="help_step2_body_text">Next this app will show you a list of all your friends and their facebook profile picture. If there is a match to a name in your contacts, it will show you the current contact picture to the right. This view will also show which entries will be synced. Press any friend for more options. When you are done, press the "Sync Pictures"-button.</string>
    <string name="help_step3_header_text">3. Syncing pictures</string>
    <string name="help_step3_body_text">Lastly you will be shown the pictures as they are syncing. During this process the app will replace the current contact picture with that person\'s Facebook profile picture.</string>
    <string name="menu_unlink_all">Unlink All</string>
    <string name="menu_smartmatch">Smart Match</string>
    <string name="menu_syncpictures">Sync Pictures</string>
    <string name="menu_savelinks">Save Links</string>
    <string name="menu_loadlinks">Load Links</string>
    <string name="no_friend_selected">No friends linked with contacts (do a Smart Match to automatically attempt to pair contacts and Facebook friends)</string>
    <string name="save_friends_before_sync_question">Do you want to save your current links between facebook friends and contacts?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="friend_contact_synced">Has been synced!</string>
    <string name="wall_post_msg">I synced my Android contact pictures with Contact Picture Sync!</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=heinrisch.contact.picture.sync</string>
    <string name="play_store_image" translatable="false">https://lh4.ggpht.com/lYoM6LIZDsmIHAAxaHuO5D_CIcXTeluVCUHXKRtQNa2jaC_rpewCgudnqe2UJsJZgls=w124</string>
    <string name="menu_recommend_on_wall">Recommend this App</string>
    <string name="settings">Settings</string>
    <string name="use_profile_piucture">Use profile picture</string>
    <string name="use_profile_piucture_on">Just sync the profile picture</string>
    <string name="use_profile_piucture_off">Try to find a larger picture</string>
    <string name="crop_piuctures">Crop pictures to Square</string>
    <string name="crop_piuctures_on">All pictures will be cropped to squares</string>
    <string name="crop_piuctures_off">Do not crop picture</string>

</resources>