<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_syncpictures"
        android:showAsAction="withText"
        android:title="@string/menu_syncpictures"/>
    <item
        android:id="@+id/menu_smartmatch"
        android:showAsAction="withText"
        android:title="@string/menu_smartmatch"/>
    <item
        android:id="@+id/menu_savelinks"
        android:showAsAction="withText"
        android:title="@string/menu_savelinks"/>
    <item
        android:id="@+id/menu_loadlinks"
        android:showAsAction="withText"
        android:title="@string/menu_loadlinks"/>
    <item
        android:id="@+id/menu_unlink_all"
        android:showAsAction="withText"
        android:title="@string/menu_unlink_all"/>
    <item
        android:id="@+id/menu_recommend"
        android:showAsAction="withText"
        android:title="@string/menu_recommend_on_wall"/>

</menu>